--- a/app/build.gradle
+++ b/app/build.gradle
@@ -17,6 +17,14 @@ android {
       proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
     }
   }
+
+  sourceSets {
+    main {
+      jni.srcDirs = []
+      jniLibs.srcDirs = ['src/main/libs']
+    }
+  }
+
 }
 
 dependencies {
